# RogueCpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  build_all  build_debug  build_release  build_relwithdebuginfo  generate  generate_debug  generate_release  generate_relwithdebuginfo
code/libraries/BearLibTerminal/Include/C/: BearLibTerminal.h
code/source/: RoguelikeFramework.cpp  RoguelikeFramework.h
code/source/Core/: CoreDataTypes.Forward.h  CoreDataTypes.cpp  CoreDataTypes.h
code/source/Core/Collections/: FixedArrary.h  StackArray.h
code/source/Core/Events/: Event.cpp  Event.h
code/source/Core/Materials/: Materials.cpp  Materials.h
code/source/Core/Math/: Math.h  Perlin.h
code/source/Core/Monster/: BaseDrivers.cpp  BaseDrivers.h  Monster.cpp  Monster.h
code/source/Core/Pathfinding/: Pathfinding.cpp  Pathfinding.h
code/source/Core/Stats/: StatManager.cpp  StatManager.h
code/source/Data/: JobSystem.cpp  JobSystem.h  RegisterSaveTypes.h  Resouces.cpp  Resouces.h  Resources.cpp  Resources.h  RingBuffer.h  RogueArena.cpp  RogueArena.h  RogueDataManager.cpp  RogueDataManager.h  SaveManager.cpp  SaveManager.h
code/source/Data/Serialization/: BitStream.cpp  BitStream.h  Serialization.h
code/source/Debug/: Debug.h  Profiling.h
code/source/Game/: Game.cpp  Game.h  GameHeaders.h  IO.cpp  IO.h  PlayerData.cpp  PlayerData.h  ThreadManagers.cpp  ThreadManagers.h
code/source/LOS/: LOS.cpp  LOS.h  TileMemory.cpp  TileMemory.h
code/source/Map/: CMakeLists.txt  Map.cpp  Map.h  MapUtils.cpp  MapUtils.h  WorldManager.cpp  WorldManager.h
code/source/Render/: RenderTools.cpp  RenderTools.h  Terminal.cpp  Terminal.h  VulkanTest.cpp  VulkanTest.h
code/source/Render/Fonts/: FontManager.cpp  FontManager.h
code/source/Render/Images/: ImageManager.cpp  ImageManager.h
code/source/Render/UI/: Bar.cpp  Bar.h  Label.cpp  Label.h  Panel.cpp  Panel.h  UIManager.cpp  UIManager.h
code/source/Render/VulkanTerminal/: VulkanTerminal.cpp  VulkanTerminal.h  VulkanTest.cpp  VulkanTest.h
code/source/Render/Windows/: Window.cpp  Window.h
code/source/Utils/: FileUtils.h  FormatUtils.h  Utils.cpp  Utils.h
resources/: config.ini  materials_base.csv  reactions_base.csv  stats_base.csv
resources/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
